--- a/style.css
+++ b/style.css
@@ -196,13 +196,18 @@ img{
   #why .row > .second,
   #why .row > .third  {
     width: 100%;
-    margin-top: 80px;
+    margin-top: 100px;
 
   }
 
   .container {
     width: 100%;
   }
+
+  #why .third {
+    margin-top: 50px;
+  }
 }
 
 /* Chiedere come fare in maniera si che solo il testo diminuisca nella versione cell */
+ /* #why .row > .third chiedere come mai non funzioni margin top in questo caso */
